muttfuzz: account for timeouts correctly

--- a/muttfuzz/Dockerfile
+++ b/muttfuzz/Dockerfile
@@ -48,6 +48,9 @@ ENV FUZZ $HARNESS
 # 300s
 ARG TIME_PER_MUTANT=300
 ENV TIME_PER_MUTANT $TIME_PER_MUTANT
+# 5s
+ARG LIBFUZZER_TIMEOUT=5
+ENV LIBFUZZER_TIMEOUT $LIBFUZZER_TIMEOUT
 # 1h
 ARG EVAL_BUDGET=3600
 ENV EVAL_BUDGET $EVAL_BUDGET
